[package]
name = "ts-repo"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }

[dependencies]
ts-cursor = { path = "../ts-cursor"}
tree-sitter-php = { git = "https://github.com/tree-sitter/tree-sitter-php.git", branch = "master" }
tree-sitter-javascript = { git = "https://github.com/tree-sitter/tree-sitter-javascript.git", branch = "master" }
gar-crawl = "0.1.16"
tokio = "1.20.1"
anyhow = "1.0.62"
